Chore: 컨트롤러, 서비스, 핸들러 부분 주석 및 코드 정리